--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "amo-tools-desktop",
   "version": "0.2.8-beta",
-  "main": "main.js",
+  "main": "src/main.js",
   "license": "MIT",
   "description": "MEASUR",
   "author": "Advanced Manufacturing Office",
